--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,7 @@
       <%= devise_error_messages! %>
 
       <div class="form-group">
-        <%= f.name_field :name, :class => 'form-control', :placeholder => 'Name' %>
+        <%= f.text_field :name, :class => 'form-control', :placeholder => 'Name' %>
       </div>
 
       <div class="form-group">
