--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -5,11 +5,16 @@
 
     <% @matches.each do |match| %>
       <p>
-        <%= match.user.name %> <%= match.matched_user%> <%= match.date.to_date%>
+        <%= match.user.name %> was paired with <%= match.matched_user%> on <%= match.date.to_date%>
       </p>
     <% end %>
-
-    <% @match.each do |match| %>
     <p> Today's Match: </p>
-      <% match.matched_user %>
+    <% @match.each do |match| %>
+      <% if match.date = Date.today %>
+        <%= match.matched_user %>
+      <% else %>
+        <%= current_user.name %>
+      <% end %>
     <% end %>
+
+  </div>
