--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -48,3 +48,7 @@
     <% end %>
 
 </div>
+
+<div>
+  <%= link_to "Log out", destroy_user_session_path, method: :delete,  class: " btn btn-default"%></li>
+</div>
