added automatic assigning

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,3 +1,10 @@
+
+  <%= @final_draw %>
+  <%= @match_names %>
+  <%= @user_ids %>
+
+
+
 <div class="panel panel-primary">
   <div class="panel-heading"><h2>Former pairings</h2>
   </div>
@@ -24,6 +31,8 @@
         <%= current_user.name %>
       <% end %>
     <% end %>
+
+
   </div>
 </div>
 
